--- a/index.html
+++ b/index.html
@@ -2,282 +2,315 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PixMorph - Resize & Compress Images</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PixMorph - Smart Image Editor</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
-
     body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #e6f0fb;
-      color: #333;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
+      padding: 0;
+      background: #f4f4f4;
     }
-
     header {
-      width: 100%;
-      max-width: 900px;
-      background: white;
-      padding: 15px 30px;
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
-      border-radius: 8px;
-    }
-
-    header img {
-      height: 50px;
-      user-select: none;
-    }
-
-    header h1 {
-      font-weight: 700;
-      font-size: 28px;
-      color: #1a73e8;
-      margin: 0;
-    }
-
-    .tab-buttons {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    .tab-buttons button {
-      padding: 10px 20px;
-      border: none;
-      background-color: #1a73e8;
+      background: #1a73e8;
       color: white;
-      border-radius: 6px;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+    h1 { margin: 0; font-size: 2rem; }
+    .container {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    .tab-menu {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1.5rem;
+    }
+    .tab-btn {
+      background: #e0e0e0;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 5px;
       cursor: pointer;
-      font-weight: 600;
+      border-radius: 6px;
+      font-weight: 500;
+      transition: background 0.3s;
     }
-
-    .tab-buttons button.active {
-      background-color: #155ab6;
+    .tab-btn.active,
+    .tab-btn:hover {
+      background: #1a73e8;
+      color: white;
     }
-
-    main {
-      background: white;
-      max-width: 900px;
-      width: 100%;
-      padding: 25px 30px 40px;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-    }
-
     .tool-section {
       display: none;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-
     .tool-section.active {
       display: block;
     }
-
     label {
+      font-weight: bold;
+      margin-top: 1rem;
       display: block;
-      margin: 12px 0 6px;
-      font-weight: 600;
-      color: #1a73e8;
     }
-
     input[type="file"],
     input[type="number"],
     select {
-      padding: 8px 10px;
-      font-size: 16px;
-      border: 1.5px solid #cbd6ee;
-      border-radius: 6px;
+      display: block;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
+      padding: 0.5rem;
       width: 100%;
-      max-width: 250px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
     }
-
+    input[type="file"] { background-color: #f8faff; }
+    select:hover,
+    input:hover {
+      border-color: #1a73e8;
+      box-shadow: 0 0 4px rgba(26, 115, 232, 0.4);
+    }
     button {
       background-color: #1a73e8;
       color: white;
       border: none;
-      padding: 12px 20px;
-      font-size: 16px;
-      border-radius: 6px;
+      padding: 0.6rem 1.2rem;
+      border-radius: 5px;
       cursor: pointer;
+      margin-right: 10px;
+    }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    img {
       margin-top: 15px;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #155ab6;
-    }
-
-    #preview-container {
-      margin-top: 25px;
-      text-align: center;
-    }
-
-    #result-image {
       max-width: 100%;
-      max-height: 400px;
-      border-radius: 8px;
-      box-shadow: 0 0 12px rgba(26, 115, 232, 0.3);
-    }
-
-    #error-msg {
-      color: #d32f2f;
-      margin-top: 10px;
-      font-weight: 600;
-    }
-
-    #info {
-      margin-top: 12px;
-      color: #555;
-    }
-
-    #download-link {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background-color: #1a73e8;
-      color: white;
+      height: auto;
       border-radius: 6px;
-      text-decoration: none;
-      font-weight: 600;
+      transition: transform 0.3s ease;
     }
-
-    #download-link:hover {
-      background-color: #155ab6;
+    img:hover {
+      transform: scale(1.02);
+    }
+    .preview-section,
+    .image-compare {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .output { margin-top: 1rem; }
+    .error {
+      color: red;
+      font-weight: bold;
+      margin-top: 0.5rem;
+    }
+    .footer {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="images/pixmorph_logo.png" alt="PixMorph Logo" />
-    <h1>PixMorph</h1>
-  </header>
-
-  <div class="tab-buttons">
-    <button class="tab-btn active" data-tab="resize">Resize Image</button>
-    <button class="tab-btn" data-tab="compress">Compress Image</button>
+ <header>
+  <div style="display: flex; align-items: center; justify-content: center; gap: 15px; padding: 15px;">
+    <img src="https://raw.githubusercontent.com/7905265903rajat/Pixmorphy/main/pixmorph_logo.PNG" 
+         alt="PixMorph Logo" 
+         style="height: 70px; border-radius: 12px; background-color: #fff; padding: 5px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+    <h1 style="font-size: 28px; color: #333;">PixMorph - Smart Image Editor</h1>
   </div>
+</header>
 
-  <main>
+
+  <div class="container">
+    <div class="tab-menu">
+      <button class="tab-btn active" data-tab="resize">Resize</button>
+      <button class="tab-btn" data-tab="compress">Compress</button>
+      <button class="tab-btn" data-tab="enhance">Enhance</button>
+    </div>
+
     <!-- Resize Tool -->
-    <div class="tool-section active" id="resize">
-      <label for="upload-resize">Upload Image:</label>
+    <section id="resize" class="tool-section active">
+      <label for="upload-resize">Upload Image</label>
       <input type="file" id="upload-resize" accept="image/*" />
-
-      <label for="platform-select">Choose Platform:</label>
+      <label for="platform-select">Choose Platform</label>
       <select id="platform-select">
         <option value="">Custom Size</option>
-        <option value="youtube-profile">YouTube Profile (800x800)</option>
-        <option value="youtube-banner">YouTube Banner (2560x1440)</option>
-        <option value="instagram-profile">Instagram Profile (110x110)</option>
-        <option value="instagram-post">Instagram Post (1080x1080)</option>
-        <option value="facebook-profile">Facebook Profile (170x170)</option>
-        <option value="facebook-cover">Facebook Cover (820x312)</option>
+        <option value="youtube-profile">YouTube Profile (800×800)</option>
+        <option value="youtube-banner">YouTube Banner (2560×1440)</option>
+        <option value="instagram-profile">Instagram Profile (110×110)</option>
+        <option value="instagram-post">Instagram Post (1080×1080)</option>
+        <option value="facebook-profile">Facebook Profile (170×170)</option>
+        <option value="facebook-cover">Facebook Cover (820×312)</option>
       </select>
-
-      <label for="width-input">Width (px):</label>
-      <input type="number" id="width-input" min="1" />
-
-      <label for="height-input">Height (px):</label>
-      <input type="number" id="height-input" min="1" />
-
+      <label for="width-input">Width (px)</label>
+      <input type="number" id="width-input" placeholder="e.g., 1080" />
+      <label for="height-input">Height (px)</label>
+      <input type="number" id="height-input" placeholder="e.g., 1080" />
       <button id="resize-btn">Resize & Preview</button>
-      <button id="reset-btn" style="background-color: #888; margin-left: 10px;">Reset</button>
-
-      <div id="error-msg"></div>
-      <div id="info"></div>
-
-      <div id="preview-container">
-        <img id="result-image" src="" alt="Preview will appear here" />
+      <button id="reset-btn">Reset</button>
+      <div class="output preview-section">
+        <div><strong>Resized</strong><br>
+          <img id="result-image" src="" alt="Resized Preview" />
+          <a id="download-link" style="display:none" download="pixmorph_resized.png">Download</a>
+        </div>
       </div>
-
-      <a id="download-link" href="#" style="display:none;">Download Resized Image</a>
-    </div>
+      <div id="error-msg" class="error"></div>
+    </section>
 
     <!-- Compress Tool -->
-    <div class="tool-section" id="compress">
-      <label for="upload-compress">Upload Image:</label>
-      <input type="file" id="upload-compress" accept="image/*" />
-
-      <label for="quality-input">Compression Quality in Kb(10-10000):</label>
-      <input type="number" id="quality-input" min="10" max="100000" value="70" />
-
-      <label for="format-select">Change Format:</label>
-      <select id="format-select">
-        <option value="image/jpeg">JPEG</option>
-        <option value="image/png">PNG</option>
-        <option value="image/webp">WEBP</option>
-      </select>
-
+    <section id="compress" class="tool-section">
+      <label for="upload-compress">Upload Image</label>
+      <input type="file" id="upload-compress" accept="image/*"/>
+      <label for="quality">Compression Quality (0.1–1)</label>
+      <input type="number" id="quality" step="0.1" min="0.1" max="1" value="0.7"/>
       <button id="compress-btn">Compress & Preview</button>
-
-      <div id="preview-container">
-        <img id="compressed-image" src="" alt="Compressed preview will appear here" />
+      <div class="output preview-section">
+        <div><strong>Compressed</strong><br>
+          <img id="compressed-image" src="" alt="Compressed Preview"/>
+          <a id="download-compress-link" style="display:none" download="pixmorph_compressed.jpg">Download</a>
+        </div>
       </div>
+    </section>
 
-      <a id="download-compress" href="#" style="display:none;">Download Compressed Image</a>
-    </div>
-  </main>
+    <!-- Enhance Tool -->
+    <section id="enhance" class="tool-section">
+      <label for="upload-enhance">Upload Image</label>
+      <input type="file" id="upload-enhance" accept="image/*"/>
+      <label for="brightness">Brightness (0.5–2)</label>
+      <input type="number" id="brightness" step="0.1" min="0.5" max="2" value="1"/>
+      <label for="contrast">Contrast (0.5–2)</label>
+      <input type="number" id="contrast" step="0.1" min="0.5" max="2" value="1"/>
+      <label for="sharpness">Sharpness (0–5)</label>
+      <input type="number" id="sharpness" step="0.1" min="0" max="5" value="1"/>
+      <button id="enhance-btn">Enhance & Preview</button>
+      <div class="output image-compare">
+        <div><strong>Original</strong><br><img id="original-image" src="" alt="Original"/></div>
+        <div><strong>Enhanced</strong><br><img id="enhanced-image" src="" alt="Enhanced"/></div>
+      </div>
+      <a id="download-enhanced" style="display:none" download="pixmorph_enhanced.png">Download Enhanced Image</a>
+    </section>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 PixMorph by Rajat Gupta
+  </div>
 
   <script>
-    const tabButtons = document.querySelectorAll('.tab-btn');
+    const tabs = document.querySelectorAll('.tab-btn');
     const sections = document.querySelectorAll('.tool-section');
+    tabs.forEach(btn => btn.addEventListener('click', () => {
+      tabs.forEach(b => b.classList.remove('active'));
+      sections.forEach(s => s.classList.remove('active'));
+      btn.classList.add('active');
+      document.getElementById(btn.dataset.tab).classList.add('active');
+    }));
 
-    tabButtons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        tabButtons.forEach(b => b.classList.remove('active'));
-        sections.forEach(s => s.classList.remove('active'));
-        btn.classList.add('active');
-        document.getElementById(btn.dataset.tab).classList.add('active');
-      });
+    // Resize Logic
+    const platformSizes = {
+      "youtube-profile":[800,800],"youtube-banner":[2560,1440],
+      "instagram-profile":[110,110],"instagram-post":[1080,1080],
+      "facebook-profile":[170,170],"facebook-cover":[820,312]
+    };
+    document.getElementById('platform-select').addEventListener('change', e => {
+      const sz = platformSizes[e.target.value];
+      document.getElementById('width-input').value = sz ? sz[0] : '';
+      document.getElementById('height-input').value = sz ? sz[1] : '';
+    });
+    document.getElementById('resize-btn').addEventListener('click', () => {
+      const up = document.getElementById('upload-resize').files[0];
+      const w = parseInt(document.getElementById('width-input').value);
+      const h = parseInt(document.getElementById('height-input').value);
+      const err = document.getElementById('error-msg');
+      if (!up) return err.textContent = 'Upload an image';
+      if (!w || !h) return err.textContent = 'Enter valid width & height';
+      const fr = new FileReader();
+      fr.onload = e => {
+        const img = new Image();
+        img.onload = () => {
+          const c = document.createElement('canvas');
+          c.width=w; c.height=h;
+          c.getContext('2d').drawImage(img,0,0,w,h);
+          const d = c.toDataURL('image/png');
+          document.getElementById('result-image').src=d;
+          const dl = document.getElementById('download-link');
+          dl.href=d; dl.style.display='inline-block';
+          err.textContent='';
+        };
+        img.src=e.target.result;
+      }; fr.readAsDataURL(up);
+    });
+    document.getElementById('reset-btn').addEventListener('click', () => {
+      ['upload-resize','width-input','height-input'].forEach(id=>document.getElementById(id).value='');
+      document.getElementById('result-image').src='';
+      document.getElementById('download-link').style.display='none';
+      document.getElementById('platform-select').selectedIndex=0;
+      document.getElementById('error-msg').textContent='';
     });
 
-    // Resize functionality: copy same logic from your existing script (use upload-resize etc.)
-    // Compress functionality:
-    const uploadCompress = document.getElementById('upload-compress');
-    const qualityInput = document.getElementById('quality-input');
-    const formatSelect = document.getElementById('format-select');
-    const compressBtn = document.getElementById('compress-btn');
-    const compressedImage = document.getElementById('compressed-image');
-    const downloadCompress = document.getElementById('download-compress');
-
-    compressBtn.addEventListener('click', () => {
-      const file = uploadCompress.files[0];
-      if (!file) return alert("Please upload an image.");
-
-      const reader = new FileReader();
-      reader.onload = function (event) {
-        const img = new Image();
-        img.onload = function () {
-          const canvas = document.createElement('canvas');
-          canvas.width = img.width;
-          canvas.height = img.height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0);
-
-          const quality = parseInt(qualityInput.value) / 100;
-          const format = formatSelect.value;
-
-          const dataUrl = canvas.toDataURL(format, quality);
-          compressedImage.src = dataUrl;
-          downloadCompress.href = dataUrl;
-          downloadCompress.download = `pixmorph_compressed.${format.split('/')[1]}`;
-          downloadCompress.style.display = 'inline-block';
+    // Compress Logic
+    document.getElementById('compress-btn').addEventListener('click', () => {
+      const up = document.getElementById('upload-compress').files[0];
+      const q = parseFloat(document.getElementById('quality').value);
+      if (!up || q<0.1||q>1) return alert('Upload image and set quality 0.1–1');
+      const fr = new FileReader();
+      fr.onload = e => {
+        const img=new Image();
+        img.onload = () => {
+          const c = document.createElement('canvas');
+          c.width=img.width; c.height=img.height;
+          c.getContext('2d').drawImage(img,0,0);
+          const d = c.toDataURL('image/jpeg',q);
+          document.getElementById('compressed-image').src=d;
+          const dl = document.getElementById('download-compress-link');
+          dl.href=d; dl.style.display='inline-block';
         };
-        img.src = event.target.result;
-      };
-      reader.readAsDataURL(file);
+        img.src=e.target.result;
+      }; fr.readAsDataURL(up);
+    });
+
+    // Enhance Logic
+    document.getElementById('enhance-btn').addEventListener('click', () => {
+      const up = document.getElementById('upload-enhance').files[0];
+      if (!up) return alert('Upload an image');
+      const b = parseFloat(document.getElementById('brightness').value);
+      const c = parseFloat(document.getElementById('contrast').value);
+      const s = parseFloat(document.getElementById('sharpness').value);
+      const fr = new FileReader();
+      fr.onload = e => {
+        const img = new Image();
+        img.onload = () => {
+          document.getElementById('original-image').src = e.target.result;
+          const c2 = document.createElement('canvas');
+          c2.width=img.width; c2.height=img.height;
+          const ctx = c2.getContext('2d');
+          ctx.filter = `brightness(${b}) contrast(${c})`;
+          ctx.drawImage(img,0,0);
+          if (s>0){
+            let data = ctx.getImageData(0,0,c2.width,c2.height);
+            for (let i=0;i<data.data.length;i+=4){
+              data.data[i]+=s*10;
+              data.data[i+1]+=s*10;
+              data.data[i+2]+=s*10;
+            }
+            ctx.putImageData(data,0,0);
+          }
+          const d = c2.toDataURL('image/png');
+          document.getElementById('enhanced-image').src=d;
+          const dl = document.getElementById('download-enhanced');
+          dl.href=d; dl.style.display='inline-block';
+        };
+        img.src = e.target.result;
+      }; fr.readAsDataURL(up);
     });
   </script>
 </body>
