--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
         </a>
         <div class="header-actions">
           <button class="btn btn-secondary" onclick="downloadLogs()">
-            <i class="fas fa-download"></i> Download Logs
+           // <i class="fas fa-download"></i> Download Logs
           </button>
           <button class="btn btn-primary" onclick="showFeedback()">
             <i class="fas fa-star"></i> Rate Us
@@ -852,7 +852,7 @@
     <div class="container">
       <div class="footer-links">
         <a href="#" onclick="showFeedback()">Feedback</a>
-        <a href="#" onclick="downloadLogs()">Download Logs</a>
+       // <a href="#" onclick="downloadLogs()">Download Logs</a>
         <a href="mailto:support@pixmorph.com">Contact</a>
       </div>
       <p>&copy; 2024 PixMorph. Created by Rajat Gupta. All rights reserved.</p>
