--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E4TV7Y8LM7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-E4TV7Y8LM7');
-</script>
+ <script data-goatcounter="https://7296.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <head>
   <meta charset="UTF-8" />
